# aui-adapter-ari-simple

./: README.md  pyproject.toml
src/: aui_adapter_ari_simple.py
