
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aui-adapter-ari-simple"
version = "0.1.0"
description = "Asterisk ARI adapter (simple) for AUI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
authors = [{ name = "AUI AudioUserInterface" }]

[project.entry-points."aui.adapters"]
ari = "aui_adapter_ari_simple:AriAdapter"

[tool.setuptools.packages.find]
where = ["src"]
